--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 script:
     - echo "Deploying"
 install:
+    - npm install
     - npm install -g firebase-tools
 after_success:
+    - npm run build
     - firebase deploy --token $FIREBASE_TOKEN
