--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "cssnano": "^3.10.0",
     "firebase": "^4.1.3",
+    "npm-run-all": "^4.0.2",
     "postcss": "^6.0.8",
+    "postcss-cli": "^4.1.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-discard-comments": "^2.0.4",
     "postcss-import": "^10.0.0",
@@ -16,9 +18,13 @@
     "react-scripts": "1.0.10"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-react": "react-scripts start",
+    "build-react": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postcss": "postcss src/**/*.postcss -c ./postcss.config.js --dir src --base src --ext '.css'",
+    "postcss-watch": "postcss src/**/*.postcss -c ./postcss.config.js --dir src --base src --ext '.css' --watch",
+    "start": "npm-run-all -p postcss-watch start-react",
+    "build": "npm run postcss && npm run build-react"
   }
 }
