--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-discard-comments": "^2.0.4",
     "postcss-import": "^10.0.0",
+    "postcss-nested": "^2.0.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
