--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eject": "react-scripts eject",
     "postcss": "postcss src/**/*.postcss -c ./postcss.config.js --dir src --base src --ext '.css'",
     "postcss-watch": "postcss src/**/*.pcss -c ./postcss.config.js --dir src --base src --ext '.css' --watch",
-    "start": "npm-run-all -p postcss-watch start-react",
+    "start": "npm run postcss && npm-run-all -p postcss-watch start-react",
     "build": "npm run postcss && npm run build-react"
   }
 }
