--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cssnano": "^3.10.0",
     "firebase": "^4.1.3",
+    "immutability-helper": "^2.3.0",
     "npm-run-all": "^4.0.2",
     "postcss": "^6.0.8",
     "postcss-cli": "^4.1.0",
