--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss-import": "^10.0.0",
     "postcss-nested": "^2.0.4",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10"
